# MemCycle

./: README.md  index.html  package-lock.json  package.json  playwright.config.ts  playwright.native.config.ts  playwright.web.config.ts  vite.config.ts  vitest.config.ts
.sisyphus/evidence/: task-1-build-output.txt  task-1-dock-check.txt  task-10-cascade.txt  task-10-crud.txt  task-11-crud.txt  task-11-filter.txt  task-12-due.txt  task-12-review.txt  task-13-backoff.txt  task-13-daily.txt  task-14-tray.txt  task-15-timeout.txt  (+32 more)
e2e/: accessibility.e2e.ts  algorithm-switching.e2e.ts  card-form.e2e.ts  card-lifecycle.e2e.ts  collins-dictionary-edge-cases.e2e.ts  collins-dictionary.e2e.ts  concurrent-operations.e2e.ts  deck-management.e2e.ts  export-import.e2e.ts  final-qa.e2e.ts  form-validation-edge-cases.e2e.ts  onboarding.e2e.ts  playwright.setup.ts  review-popup-edge-cases.e2e.ts  review-popup.e2e.ts  sample.e2e.ts  settings-edge-cases.e2e.ts  settings-panel.e2e.ts  settings-persistence.e2e.ts  task-27-integration.e2e.ts  timer-countdown.e2e.ts  tray-dropdown.e2e.ts
e2e-native/: native-smoke.e2e.ts  popup-timing.e2e.ts  tray-interactions.e2e.ts
scripts/: reset-native-db.sh  run-native-smoke.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_init.up.sql
src-tauri/migrations/pg/: 0001_init.up.sql
src-tauri/src/: lib.rs  main.rs  popup.rs  timer.rs  tray.rs
src-tauri/src/commands/: card.rs  deck.rs  export.rs  llm.rs  mod.rs  review.rs  settings.rs
(+54 files in other folders)
