[package]
name = "memcycle"
version = "0.1.0"
description = "A macOS menu bar flashcard app"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "memcycle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-sql = { version = "2", features = ["sqlite", "postgres"] }
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2.5.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
